...
      wantsToAssign = await showDialog<bool>(
            context: context,
            builder: (final BuildContext context) {
              return AlertDialog(
                title: const Text('Reassignment Confirmation'),
                content: Text(
                  'Are you sure you\'d like to move ${widget.lstPatientsReassignment!.length} '
                  'patient${widget.lstPatientsReassignment!.length == 1 ? '' : 's'} from '
                  '${widget.therapistThatWillHavePatientsMoved!.fName} '
                  '${widget.therapistThatWillHavePatientsMoved!.lName} to '
                  '${nuTherapist.fName} ${nuTherapist.lName}?',
                ),
                actions: <Widget>[
...
                      ? 'The operation was successful, you may now refresh the page.'
                      : 'There was an error moving the patients.\n'
                          '${res.body.toString()}',
                ),
                actions: <Widget>[
                  TextButton(
                    key: const Key("patient_moved_ack"),
                    onPressed: () {
                      Navigator.pushReplacement(
                          context,
                          MaterialPageRoute(
                              builder: (final context) =>
                                  const TherapistListPage()));
...
